--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^19.2.3",
     "lucide-react": "^0.562.0",
     "@google/genai": "^1.37.0",
-    "@supabase/supabase-js": "^2.90.1"
+    "@supabase/supabase-js": "^2.90.1",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
