feat: Improve PWA installation prompt
Adds logic to detect iOS devices and standalone mode to provide a more tailored PWA installation experience. Also updates manifest with portrait orientation and maskable icons for better app icon display.

--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,21 @@
   "short_name": "RKAS SD",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#f3f4f6",
   "theme_color": "#2563eb",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2997/2997295.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2997/2997295.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
