feat: Add quantity field to realization and mock data
Adds a `quantity` field to `RealizationDetail` to track realized volumes. Updates mock data and form state in `SPJRealization.tsx` to accommodate this new field, allowing for more detailed realization tracking beyond just monetary amounts.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VITE_SUPABASE_URL=https://ryetzazwapxopsoqohlj.supabase.co
-VITE_SUPABASE_ANON_KEY=sb_publishable_UAS1cIt6bFC5-ggNwKWIRQ_Cg-hIvbu
-VITE_API_KEY=your-google-gemini-key-here
+VITE_SUPABASE_URL=https://id-project-anda.supabase.co
+VITE_SUPABASE_ANON_KEY=masukkan-key-anon-panjang-disini
+VITE_API_KEY=masukkan-google-gemini-key-disini
