--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules (Folder library yang berat)
 node_modules
 dist
 dist-ssr
@@ -18,7 +19,18 @@ dist-ssr
 .idea
 .DS_Store
 *.suo
-*.ntvs*
+*.ntvs
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables (File RAHASIA - Jangan diupload)
+.env
+.env.*
+!.env.example
+
+# Supabase generated types
+supabase/types.ts
+
+# OS generated files
+Thumbs.db
