--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2666/2666505.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2666/2666505.png?v=2",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2666/2666505.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2666/2666505.png?v=2",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
